log
vi., 18 de abr. de 2025 15:06:55: 
 hashmap.c | 61 +++++++++++++++++++++++++++++++++++++++----------------------
 1 file changed, 39 insertions(+), 22 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:50:9: error: unused variable 'ogPos' [-Werror=unused-variable]
     int ogPos = pos;
         ^~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
vi., 18 de abr. de 2025 15:07:25: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
aa32002
vi., 18 de abr. de 2025 15:11:14: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:71:9: error: 'return' with no value, in function returning non-void [-Werror]
         return;
         ^~~~~~
hashmap.c:67:10: note: declared here
 HashMap *createMap(long capacity)
          ^~~~~~~~~
hashmap.c:76:9: error: 'return' with no value, in function returning non-void [-Werror]
         return;
         ^~~~~~
hashmap.c:67:10: note: declared here
 HashMap *createMap(long capacity)
          ^~~~~~~~~
cc1.exe: all warnings being treated as errors
50cca53
vi., 18 de abr. de 2025 15:11:55: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:71:9: error: 'return' with no value, in function returning non-void [-Werror]
         return;
         ^~~~~~
hashmap.c:67:10: note: declared here
 HashMap *createMap(long capacity)
          ^~~~~~~~~
cc1.exe: all warnings being treated as errors
76dea7f
vi., 18 de abr. de 2025 15:12:45: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:79:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
9d04551
vi., 18 de abr. de 2025 15:13:10: 
 hashmap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:76:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
97d56ee
vi., 18 de abr. de 2025 15:14:31: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
fdc9a3d
vi., 18 de abr. de 2025 15:24:25: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  5|4
total_score: 30/70
419fcb3
vi., 18 de abr. de 2025 15:31:25: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
758b73e
vi., 18 de abr. de 2025 15:33:39: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  10|3
total_score: 40/70
993942e
vi., 18 de abr. de 2025 15:38:03: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
ba26efa
vi., 18 de abr. de 2025 15:40:03: 
 hashmap.c | 23 ++++++++++++++++-------
 1 file changed, 16 insertions(+), 7 deletions(-)
 tests:  13|2
total_score: 50/70
6de2caf
vi., 18 de abr. de 2025 19:56:04: 
 hashmap.c | 17 +++++++----------
 1 file changed, 7 insertions(+), 10 deletions(-)
 tests:  13|2
total_score: 50/70
72317c8
vi., 18 de abr. de 2025 20:01:59: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  13|2
total_score: 50/70
599d8aa
